--- a/packages/manager/modules/sms/src/sms/guides/translations/Messages_en_GB.json
+++ b/packages/manager/modules/sms/src/sms/guides/translations/Messages_en_GB.json
@@ -24,5 +24,8 @@
   "sms_guides_api_nodejs": "Sending SMS messages with the OVHcloud API in Node.js",
   "sms_guides_api_php": "Sending SMS messages with the OVHcloud API in PHP",
   "sms_guides_empty": "No guide available for the language selected.",
-  "sms_guides_breadcrumb": "Guides"
+  "sms_guides_breadcrumb": "Guides",
+  "sms_guides_section_smpp": "SMPP",
+  "sms_guides_smpp_control_panel": "Manage an SMS SMPP account",
+  "sms_guides_smpp_specifications": "SMPP Technical Specifications"
 }
