--- a/packages/manager/modules/sms/src/sms/guides/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/sms/src/sms/guides/translations/Messages_pt_PT.json
@@ -24,5 +24,8 @@
   "sms_guides_api_nodejs": "Envoyer des SMS avec l’API OVH en Node.js.",
   "sms_guides_api_php": "Envoyer des SMS avec l’API OVH en PHP.",
   "sms_guides_empty": "Aucun guide n’est disponible pour la langue sélectionnée.",
-  "sms_guides_breadcrumb": "Manuais"
+  "sms_guides_breadcrumb": "Manuais",
+  "sms_guides_section_smpp": "SMPP",
+  "sms_guides_smpp_control_panel": "Gestão de uma conta SMS SMPP",
+  "sms_guides_smpp_specifications": "Especificações técnicas do SMPP"
 }
