--- a/packages/manager/modules/sms/src/sms/order/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/sms/src/sms/order/translations/Messages_pl_PL.json
@@ -1,20 +1,31 @@
 {
   "sms_order_title": "Zamów SMS-y",
   "sms_order_new_account": "Nowe konto",
-  "sms_order_account_label": "Usługa SMS: ",
-  "sms_order_credit_label": "Liczba kredytów: ",
-  "sms_order_credit_custom_label": "Potrzebna liczba kredytów: ",
+  "sms_order_account_label": "Wybierz konto, które chcesz zasilić",
+  "sms_order_credit_label": "Liczba zasileń",
+  "sms_order_credit_custom_label": "Ilość",
   "sms_order_credit_custom": "Inne",
   "sms_order_order": "Złóż zamówienie",
   "sms_order_ko": "Nie można wygenerować zamówienia",
   "sms_order_order_url": "zamówienie",
   "sms_order_order_site": "Złóż zamówienie na stronie WWW",
-  "sms_order_price_quantity": "Cena netto: ",
-  "sms_order_price_gift": "Zniżka: ",
-  "sms_order_price_total": "Razem (brutto): ",
-  "sms_order_price_total_vat": "VAT: ",
-  "sms_order_retract": "Żądasz natychmiastowego rozpoczęcia świadczenia usługi i przyjmujesz do wiadomości, <br/>że możesz skorzystać z prawa  do odstąpienia od umowy na warunkach określonych w przepisach art. L.121-21-5 francuskiego Kodeksu konsumenckiego.",
+  "sms_order_price_quantity": "Cena (netto)",
+  "sms_order_price_gift": "Zmniejszenie",
+  "sms_order_price_total": "Razem (brutto)",
+  "sms_order_price_total_vat": "VAT",
+  "sms_order_retract": "Zwraca się o natychmiastową realizację usługi i wyraża zgodę na skorzystanie z prawa do odstąpienia od umowy na warunkach określonych w artykule L.121-21-5 Kodeksu konsumenckiego.",
   "sms_order_bc": "Aby zakończyć operację, zatwierdź",
   "sms_order_more_info": "Dowiedz się więcej",
-  "sms_order_retract_info": "Możesz skorzystać z prawa do odstąpienia od umowy, bez podania przyczyny i bez ponoszenia konsekwencji w postaci kary pieniężnej, w ciągu 14 dni od realizacji zamówienia. Informację o odstąpieniu możesz przesłać pocztą tradycyjną, pocztą elektroniczną na adres Działu Obsługi Klienta OVHcloud lub za pośrednictwem Panelu klienta. "
+  "sms_order_retract_info": "Możesz skorzystać z prawa do odstąpienia od umowy, bez podania przyczyny i bez ponoszenia konsekwencji w postaci kary pieniężnej, w ciągu 14 dni od realizacji zamówienia. Informację o odstąpieniu możesz przesłać pocztą tradycyjną, pocztą elektroniczną na adres Działu Obsługi Klienta OVHcloud lub za pośrednictwem Panelu klienta. ",
+  "sms_order_account_channel_label": "Wybierz format konta",
+  "sms_order_account_channel_standard_title": "Standard",
+  "sms_order_account_channel_standard_description": "Jest to klasyczne konto oferowane przez OVHcloud, które pozwala na wysyłanie pojedynczych wiadomości SMS lub kampanii (batch) za pośrednictwem panelu klienta lub interfejsu API OVHcloud.",
+  "sms_order_account_channel_marketing_title": "SMPP marketing",
+  "sms_order_account_channel_marketing_footer": "Podlega on obowiązującym przepisom kraju przeznaczenia (e.g faktyczna wysyłka w godzinach pracy)",
+  "sms_order_account_channel_marketing_description": "Kanał marketingowy przeznaczony jest do wysyłania wiadomości SMS przy użyciu protokołu SMPP do użytku komercyjnego.",
+  "sms_order_account_channel_transactional_title": "SMPP transakcyjny",
+  "sms_order_account_channel_transactional_description": "Kanał transakcyjny jest przeznaczony do wysyłania wiadomości SMS przy użyciu protokołu SMPP o charakterze niehandlowym (2FA, powiadomienia, spotkania, itp.)",
+  "sms_order_account_channel_transactional_footer": "Podlega ono mniej restrykcyjnej regulacji niż kanał marketingowy (e.g wysyłka o dowolnej porze dnia)",
+  "sms_order_header_guide": "Przewodniki",
+  "sms_order_header_guide_start_with_sms": "Pierwsze kroki z SMS OVHcloud"
 }
