--- a/packages/manager/modules/sms/src/translations/Messages_de_DE.json
+++ b/packages/manager/modules/sms/src/translations/Messages_de_DE.json
@@ -1,3 +1,10 @@
 {
-  "sms_order": "Bestellen"
+  "sms_order": "Bestellen",
+  "sms_channel_label": "Account-Format",
+  "sms_channel_both": "Standard",
+  "sms_channel_marketing": "SMPP Marketing",
+  "sms_channel_transactional": "Transaktionale SMPP",
+  "sms_view_sms_label": "Details",
+  "sms_header_guide": "Anleitungen",
+  "sms_header_guide_start_with_sms": "Erste SMS von OVHcloud"
 }
