--- a/packages/manager/modules/sms/src/translations/Messages_es_ES.json
+++ b/packages/manager/modules/sms/src/translations/Messages_es_ES.json
@@ -6,5 +6,11 @@
   "sms_status_label_enable": "OK",
   "sms_status_label_disable": "Desactivado",
   "sms_view_sms_label": "Detalles",
-  "sms_order": "Contratar"
+  "sms_order": "Contratar",
+  "sms_channel_label": "Formato de cuenta",
+  "sms_channel_both": "Standard",
+  "sms_channel_marketing": "SMPP marketing",
+  "sms_channel_transactional": "SMPP transaccional",
+  "sms_header_guide": "Guías",
+  "sms_header_guide_start_with_sms": "Empezar con los SMS de OVHcloud"
 }
