--- a/packages/manager/modules/sms/src/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/sms/src/translations/Messages_pl_PL.json
@@ -6,5 +6,11 @@
   "sms_status_label_enable": "OK",
   "sms_status_label_disable": "Wyłączony",
   "sms_view_sms_label": "Szczegóły",
-  "sms_order": "Zamów"
+  "sms_order": "Zamów",
+  "sms_channel_label": "Format konta",
+  "sms_channel_both": "Standard",
+  "sms_channel_marketing": "SMPP marketing",
+  "sms_channel_transactional": "SMPP transakcyjny",
+  "sms_header_guide": "Przewodniki",
+  "sms_header_guide_start_with_sms": "Pierwsze kroki z SMS OVHcloud"
 }
