fix(i18n): add missing translations [CDS 2085]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/catalog-price/src/translations/Messages_it_IT.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_it_IT.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "anno",
   "order_catalog_price_from": "Da",
   "order_catalog_price_to": "a",
-  "order_catalog_price_interval_hour": "ora"
+  "order_catalog_price_interval_hour": "ora",
+  "order_catalog_price_beta_free": "Gratis durante la fase beta."
 }
