--- a/packages/manager/modules/catalog-price/src/translations/Messages_de_DE.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_de_DE.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "Jahr",
   "order_catalog_price_from": "Von",
   "order_catalog_price_to": "bis",
-  "order_catalog_price_interval_hour": "Stunde"
+  "order_catalog_price_interval_hour": "Stunde",
+  "order_catalog_price_beta_free": "Während der Beta-Phase kostenlos"
 }
