--- a/packages/manager/modules/catalog-price/src/translations/Messages_en_GB.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_en_GB.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "year",
   "order_catalog_price_from": "From",
   "order_catalog_price_to": "to",
-  "order_catalog_price_interval_hour": "hour"
+  "order_catalog_price_interval_hour": "hour",
+  "order_catalog_price_beta_free": "Free during the beta period"
 }
