--- a/packages/manager/modules/catalog-price/src/translations/Messages_es_ES.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_es_ES.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "año",
   "order_catalog_price_from": "De",
   "order_catalog_price_to": "a",
-  "order_catalog_price_interval_hour": "hora"
+  "order_catalog_price_interval_hour": "hora",
+  "order_catalog_price_beta_free": "Gratuito durante la beta"
 }
