--- a/packages/manager/modules/catalog-price/src/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_fr_CA.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "an",
   "order_catalog_price_interval_hour": "heure",
   "order_catalog_price_from": "De",
-  "order_catalog_price_to": "à"
+  "order_catalog_price_to": "à",
+  "order_catalog_price_beta_free": "Gratuit pendant la bêta"
 }
