--- a/packages/manager/modules/catalog-price/src/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_pl_PL.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "rok",
   "order_catalog_price_from": "Z",
   "order_catalog_price_to": "o",
-  "order_catalog_price_interval_hour": "godzina"
+  "order_catalog_price_interval_hour": "godzina",
+  "order_catalog_price_beta_free": "Bezpłatnie w wersji beta."
 }
