--- a/packages/manager/modules/catalog-price/src/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/catalog-price/src/translations/Messages_pt_PT.json
@@ -9,5 +9,6 @@
   "order_catalog_price_interval_year": "ano",
   "order_catalog_price_from": "De",
   "order_catalog_price_to": "a",
-  "order_catalog_price_interval_hour": "hora"
+  "order_catalog_price_interval_hour": "hora",
+  "order_catalog_price_beta_free": "Gratuito em versão beta."
 }
