--- a/packages/manager/modules/vps/src/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/modules/vps/src/dashboard/translations/Messages_de_DE.json
@@ -12,7 +12,7 @@
   "vps_dashboard_state_installing": "Wird installiert",
   "vps_dashboard_state_maintenance": "Wartungsarbeiten laufen",
   "vps_dashboard_state_rebooting": "Wird neu gestartet",
-  "vps_dashboard_state_running": "Wird ausgeführt",
+  "vps_dashboard_state_running": "Aktiv",
   "vps_dashboard_state_stopped": "Angehalten",
   "vps_dashboard_state_stopping": "Wird gelöscht",
   "vps_dashboard_state_upgrading": "Angebot hierfür wird gerade gewechselt",
