--- a/packages/manager/modules/vps/src/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/modules/vps/src/dashboard/translations/Messages_es_ES.json
@@ -12,7 +12,7 @@
   "vps_dashboard_state_installing": "Instalando",
   "vps_dashboard_state_maintenance": "En mantenimiento",
   "vps_dashboard_state_rebooting": "Reiniciando",
-  "vps_dashboard_state_running": "Ejecutando",
+  "vps_dashboard_state_running": "Activo",
   "vps_dashboard_state_stopped": "Cancelado",
   "vps_dashboard_state_stopping": "Cancelando",
   "vps_dashboard_state_upgrading": "Cambiando de solución",
