--- a/packages/manager/modules/vps/src/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/vps/src/dashboard/translations/Messages_pt_PT.json
@@ -12,7 +12,7 @@
   "vps_dashboard_state_installing": "A instalar...",
   "vps_dashboard_state_maintenance": "Manutenção em curso",
   "vps_dashboard_state_rebooting": "Reinicio em curso",
-  "vps_dashboard_state_running": "Execução em curso",
+  "vps_dashboard_state_running": "Ativo",
   "vps_dashboard_state_stopped": "Parado",
   "vps_dashboard_state_stopping": "Cancelamento em curso",
   "vps_dashboard_state_upgrading": "Alteração da oferta em curso",
