fix(i18n): add missing translations [CDS 2092]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/web/client/app/domain/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_de_DE.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Domainnamen",
-  "domains_order": "Bestellen"
+  "domains_order": "Bestellen",
+  "domains_empty": "Keine Ergebnisse",
+  "domains_column_domain": "Domainname",
+  "domains_column_domains_status": "Status",
+  "domains_column_domains_tech_state": "Technischer Zustand",
+  "domains_column_domains_transfer_state": "Schutz gegen Transfer",
+  "domains_column_domains_whois_owner": "ID des Inhabers",
+  "domains_column_domains_offer": "Angebot",
+  "domains_column_domains_name_server_type": "DNS-Typ",
+  "domains_status": "Status",
+  "domains_tech_state": "Technischer Zustand",
+  "domains_create": "Speichervorgang läuft",
+  "domains_incoming_transfer": "Eingehender Transfer",
+  "domains_status_ok": "Gespeichert",
+  "domains_status_expired": "Abgelaufen",
+  "domains_status_restorable": "Wiederherstellbar",
+  "domains_status_deleted": "Gelöscht",
+  "domains_status_pending_delete": "Wird endgültig gelöscht",
+  "domains_status_pending_installation": "Wird installiert",
+  "domains_status_outgoing_transfer": "Ausgehender Transfer",
+  "domains_status_dispute": "Laufender Vorgang",
+  "domains_suspension_state_not_suspended": "Aktiv",
+  "domains_suspension_state_suspended": "Inaktiv",
+  "domains_transfert_lock_status_locked": "Geschützt",
+  "domains_transfert_lock_status_unlocked": "Schutz aufgehoben",
+  "domains_transfert_lock_status_unavailable": "Nicht zutreffend",
+  "domains_transfert_lock_status_locking": "Schutz wird hergestellt",
+  "domains_transfert_lock_status_unlocking": "Schutz wird aufgehoben",
+  "domains_dns_type_hosted": "Bei OVHcloud",
+  "domains_dns_type_external": "Nicht bei OVHcloud",
+  "domains_status_tooltip_expired": "Der Domainname wurde ausgesetzt. Sie haben die Möglichkeit, ihn zu verlängern.",
+  "domains_status_tooltip_restorable": "Der Domainname wird gerade gelöscht. Sie können ihn wiederherstellen.",
+  "domains_suspension_state_tooltip_not_suspended": "Die DNS-Server sind im Register gemeldet.",
+  "domains_suspension_state_tooltip_suspended": "Die DNS-Server sind nicht im Register gemeldet.",
+  "domains_transfert_lock_status_tooltip_locked": "Die Domain ist gegen Transfer geschützt.",
+  "domains_transfert_lock__status_tooltip_unlocked": "Die Domain ist nicht gegen Transfer geschützt.",
+  "domains_transfert_lock__status_tooltip_locking": "Der Schutz der Domain vor Transfer wird gerade eingerichtet.",
+  "domains_transfert_lock__status_tooltip_unlocking": "Der Schutz der Domain vor Transfer wird gerade aufgehoben.",
+  "domains_status_tooltip_dispute": "Der Domainname ist Gegenstand eines Verwaltungs- oder Gerichtsverfahrens."
 }
