--- a/packages/manager/apps/web/client/app/domain/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_es_ES.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Dominios",
-  "domains_order": "Contratar"
+  "domains_order": "Contratar",
+  "domains_empty": "No hay resultados",
+  "domains_column_domain": "Dominio",
+  "domains_column_domains_status": "Estado",
+  "domains_column_domains_tech_state": "Estado técnico",
+  "domains_column_domains_transfer_state": "Protección contra la transferencia",
+  "domains_column_domains_whois_owner": "ID del propietario",
+  "domains_column_domains_offer": "Plan",
+  "domains_column_domains_name_server_type": "Tipo de DNS",
+  "domains_status": "Estado",
+  "domains_tech_state": "Estado técnico",
+  "domains_create": "Registro en curso",
+  "domains_incoming_transfer": "Transferencia entrante",
+  "domains_status_ok": "Registrado",
+  "domains_status_expired": "Expirado",
+  "domains_status_restorable": "Restaurable",
+  "domains_status_deleted": "Eliminado",
+  "domains_status_pending_delete": "Eliminación permanente en curso",
+  "domains_status_pending_installation": "Instalación en curso",
+  "domains_status_outgoing_transfer": "Transferencia saliente",
+  "domains_status_dispute": "Procedimiento en curso",
+  "domains_suspension_state_not_suspended": "Activo",
+  "domains_suspension_state_suspended": "Inactivo",
+  "domains_transfert_lock_status_locked": "Protegido",
+  "domains_transfert_lock_status_unlocked": "Desprotegido",
+  "domains_transfert_lock_status_unavailable": "No aplicable",
+  "domains_transfert_lock_status_locking": "Activación de la protección en curso",
+  "domains_transfert_lock_status_unlocking": "Desactivación de la protección en curso",
+  "domains_dns_type_hosted": "En OVHcloud",
+  "domains_dns_type_external": "Fuera de OVHcloud",
+  "domains_status_tooltip_expired": "El dominio está suspendido, es posible renovarlo",
+  "domains_status_tooltip_restorable": "El dominio se está eliminando, es posible restaurarlo",
+  "domains_suspension_state_tooltip_not_suspended": "Los servidores DNS están declarados en el registro",
+  "domains_suspension_state_tooltip_suspended": "Los servidores DNS no están declarados en el registro",
+  "domains_transfert_lock_status_tooltip_locked": "La protección contra la transferencia del dominio está activada",
+  "domains_transfert_lock__status_tooltip_unlocked": "La protección contra la transferencia del dominio no está activada",
+  "domains_transfert_lock__status_tooltip_locking": "Se está activando la protección contra la transferencia del dominio",
+  "domains_transfert_lock__status_tooltip_unlocking": "Se está desactivando la protección contra la transferencia del dominio",
+  "domains_status_tooltip_dispute": "El dominio está sujeto a un procedimiento administrativo o judicial"
 }
