--- a/packages/manager/apps/web/client/app/domain/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_pl_PL.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Domeny",
-  "domains_order": "Zamów"
+  "domains_order": "Zamów",
+  "domains_empty": "Brak wyników",
+  "domains_column_domain": "Domena",
+  "domains_column_domains_status": "Status",
+  "domains_column_domains_tech_state": "Stan techniczny",
+  "domains_column_domains_transfer_state": "Ochrona przed transferem",
+  "domains_column_domains_whois_owner": "ID właściciela",
+  "domains_column_domains_offer": "Pakiet",
+  "domains_column_domains_name_server_type": "Typ DNS",
+  "domains_status": "Status",
+  "domains_tech_state": "Stan techniczny",
+  "domains_create": "Trwa rejestracja",
+  "domains_incoming_transfer": "Transfer przychodzący",
+  "domains_status_ok": "Zarejestrowana",
+  "domains_status_expired": "Wygasła",
+  "domains_status_restorable": "Możliwe przywrócenie",
+  "domains_status_deleted": "Usunięto",
+  "domains_status_pending_delete": "Trwa nieodwracalne usuwanie",
+  "domains_status_pending_installation": "Trwa instalacja",
+  "domains_status_outgoing_transfer": "Transfer wychodzący",
+  "domains_status_dispute": "Procedura w trakcie",
+  "domains_suspension_state_not_suspended": "Aktywna",
+  "domains_suspension_state_suspended": "Nieaktywna",
+  "domains_transfert_lock_status_locked": "Chroniona",
+  "domains_transfert_lock_status_unlocked": "Niechroniona",
+  "domains_transfert_lock_status_unavailable": "Nie dotyczy",
+  "domains_transfert_lock_status_locking": "Włączanie ochrony w trakcie",
+  "domains_transfert_lock_status_unlocking": "Wyłączanie ochrony w trakcie",
+  "domains_dns_type_hosted": "W OVHcloud",
+  "domains_dns_type_external": "Poza OVHcloud",
+  "domains_status_tooltip_expired": "Domena jest zawieszona. Możesz ją odnowić",
+  "domains_status_tooltip_restorable": "Trwa usuwanie domeny. Możesz ją przywrócić",
+  "domains_suspension_state_tooltip_not_suspended": "Serwery DNS są zadeklarowane w rejestrze",
+  "domains_suspension_state_tooltip_suspended": "Serwery DNS nie są zadeklarowane w rejestrze",
+  "domains_transfert_lock_status_tooltip_locked": "Domena jest chroniona przed transferem",
+  "domains_transfert_lock__status_tooltip_unlocked": "Domena nie jest chroniona przed transferem",
+  "domains_transfert_lock__status_tooltip_locking": "Trwa włączanie ochrony przed transferem domeny",
+  "domains_transfert_lock__status_tooltip_unlocking": "Trwa wyłączanie ochrony przed transferem domeny",
+  "domains_status_tooltip_dispute": "Domena jest przedmiotem postępowania administracyjnego lub sądowego"
 }
