--- a/packages/manager/apps/web/client/app/domain/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_en_GB.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Domain names",
-  "domains_order": "Order"
+  "domains_order": "Order",
+  "domains_empty": "No result",
+  "domains_column_domain": "Domain name",
+  "domains_column_domains_status": "Status",
+  "domains_column_domains_tech_state": "Technical status",
+  "domains_column_domains_transfer_state": "Locked against domain name transfer",
+  "domains_column_domains_whois_owner": "Owner ID",
+  "domains_column_domains_offer": "Service plan",
+  "domains_column_domains_name_server_type": "DNS type",
+  "domains_status": "Status",
+  "domains_tech_state": "Technical status",
+  "domains_create": "Registration in progress",
+  "domains_incoming_transfer": "Incoming transfer",
+  "domains_status_ok": "Registered",
+  "domains_status_expired": "Expired",
+  "domains_status_restorable": "Restorable",
+  "domains_status_deleted": "Deleted",
+  "domains_status_pending_delete": "Deleting permanently",
+  "domains_status_pending_installation": "Installing...",
+  "domains_status_outgoing_transfer": "Outgoing transfer",
+  "domains_status_dispute": "Procedure in progress",
+  "domains_suspension_state_not_suspended": "Active",
+  "domains_suspension_state_suspended": "Disabled",
+  "domains_transfert_lock_status_locked": "Locked",
+  "domains_transfert_lock_status_unlocked": "Unlocked",
+  "domains_transfert_lock_status_unavailable": "Not applicable",
+  "domains_transfert_lock_status_locking": "Locking",
+  "domains_transfert_lock_status_unlocking": "Unlocking",
+  "domains_dns_type_hosted": "At OVHcloud",
+  "domains_dns_type_external": "Outside OVHcloud",
+  "domains_status_tooltip_expired": "The domain name is suspended, you can renew it",
+  "domains_status_tooltip_restorable": "Deleting domain name. You can restore it",
+  "domains_suspension_state_tooltip_not_suspended": "DNS servers are declared to the registry",
+  "domains_suspension_state_tooltip_suspended": "DNS servers are not declared to the registry",
+  "domains_transfert_lock_status_tooltip_locked": "The domain is locked against transfer",
+  "domains_transfert_lock__status_tooltip_unlocked": "The domain is not locked against transfer",
+  "domains_transfert_lock__status_tooltip_locking": "The domain is being locked against transfer",
+  "domains_transfert_lock__status_tooltip_unlocking": "The domain is being unlocked from transfer",
+  "domains_status_tooltip_dispute": "The domain name is subject to an administrative or judicial procedure"
 }
