--- a/packages/manager/apps/web/client/app/domain/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_it_IT.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Domini",
-  "domains_order": "Ordina"
+  "domains_order": "Ordina",
+  "domains_empty": "Nessun risultato",
+  "domains_column_domain": "Dominio",
+  "domains_column_domains_status": "Stato",
+  "domains_column_domains_tech_state": "Stato tecnico",
+  "domains_column_domains_transfer_state": "Protezione contro il trasferimento",
+  "domains_column_domains_whois_owner": "ID del proprietario",
+  "domains_column_domains_offer": "Piano",
+  "domains_column_domains_name_server_type": "Tipo di DNS",
+  "domains_status": "Stato",
+  "domains_tech_state": "Stato tecnico",
+  "domains_create": "Registrazione in corso...",
+  "domains_incoming_transfer": "Trasferimento in entrata",
+  "domains_status_ok": "Registrato",
+  "domains_status_expired": "Scaduto",
+  "domains_status_restorable": "Ripristinabile",
+  "domains_status_deleted": "Eliminato ",
+  "domains_status_pending_delete": "Eliminazione definitiva in corso...",
+  "domains_status_pending_installation": "Installazione in corso...",
+  "domains_status_outgoing_transfer": "Trasferimento in uscita",
+  "domains_status_dispute": "Procedura in corso",
+  "domains_suspension_state_not_suspended": "Attivo",
+  "domains_suspension_state_suspended": "Disattivo",
+  "domains_transfert_lock_status_locked": "Protetto",
+  "domains_transfert_lock_status_unlocked": "Non protetto",
+  "domains_transfert_lock_status_unavailable": "Non applicabile",
+  "domains_transfert_lock_status_locking": "Attivazione della protezione in corso...",
+  "domains_transfert_lock_status_unlocking": "Disattivazione della protezione in corso...",
+  "domains_dns_type_hosted": "In OVHcloud",
+  "domains_dns_type_external": "Fuori OVHcloud",
+  "domains_status_tooltip_expired": "Il dominio è sospeso, è possibile rinnovarlo",
+  "domains_status_tooltip_restorable": "Il dominio è in corso di eliminazione, è possibile ripristinarlo",
+  "domains_suspension_state_tooltip_not_suspended": "I server DNS sono dichiarati al Registro",
+  "domains_suspension_state_tooltip_suspended": "I server DNS non sono dichiarati al Registro",
+  "domains_transfert_lock_status_tooltip_locked": "Il dominio è protetto contro il trasferimento",
+  "domains_transfert_lock__status_tooltip_unlocked": "Il dominio non è protetto contro il trasferimento",
+  "domains_transfert_lock__status_tooltip_locking": "È in corso l’attivazione della protezione contro il trasferimento del dominio",
+  "domains_transfert_lock__status_tooltip_unlocking": "È in corso la disattivazione della protezione contro il trasferimento del dominio",
+  "domains_status_tooltip_dispute": "Il dominio è oggetto di una procedura amministrativa o giudiziaria"
 }
