--- a/packages/manager/apps/web/client/app/domain/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_pt_PT.json
@@ -1,4 +1,42 @@
 {
   "domains_title": "Nomes de domínio",
-  "domains_order": "Encomendar"
+  "domains_order": "Encomendar",
+  "domains_empty": "Nenhum resultado encontrado",
+  "domains_column_domain": "Domínio",
+  "domains_column_domains_status": "Estado",
+  "domains_column_domains_tech_state": "Estado técnico",
+  "domains_column_domains_transfer_state": "Proteção contra a transferência",
+  "domains_column_domains_whois_owner": "ID do titular",
+  "domains_column_domains_offer": "Plano",
+  "domains_column_domains_name_server_type": "DNS type",
+  "domains_status": "Estado",
+  "domains_tech_state": "Estado técnico",
+  "domains_create": "Registo em curso",
+  "domains_incoming_transfer": "Transferência de entrada",
+  "domains_status_ok": "Registado",
+  "domains_status_expired": "Expirado",
+  "domains_status_restorable": "Restaurável",
+  "domains_status_deleted": "Eliminado",
+  "domains_status_pending_delete": "Eliminação definitiva em curso",
+  "domains_status_pending_installation": "A instalar...",
+  "domains_status_outgoing_transfer": "Transferência de saída",
+  "domains_status_dispute": "Processo em curso",
+  "domains_suspension_state_not_suspended": "Ativo",
+  "domains_suspension_state_suspended": "Inativo",
+  "domains_transfert_lock_status_locked": "Protegido",
+  "domains_transfert_lock_status_unlocked": "Desprotegido",
+  "domains_transfert_lock_status_unavailable": "Não aplicável",
+  "domains_transfert_lock_status_locking": "Proteção em curso",
+  "domains_transfert_lock_status_unlocking": "Desproteção em curso",
+  "domains_dns_type_hosted": "Na OVHcloud",
+  "domains_dns_type_external": "Fora da OVHcloud",
+  "domains_status_tooltip_expired": "O domínio está suspenso. Pode renová-lo.",
+  "domains_status_tooltip_restorable": "O domínio está a ser eliminado. Pode restaurá-lo.",
+  "domains_suspension_state_tooltip_not_suspended": "Os servidores DNS foram declarados ao agente de registo",
+  "domains_suspension_state_tooltip_suspended": "Os servidores DNS não foram declarados ao agente de registo",
+  "domains_transfert_lock_status_tooltip_locked": "O domínio está protegido contra transferências",
+  "domains_transfert_lock__status_tooltip_unlocked": "O domínio não está protegido contra transferências",
+  "domains_transfert_lock__status_tooltip_locking": "O domínio está em curso de proteção contra transferências",
+  "domains_transfert_lock__status_tooltip_unlocking": "O domínio está em curso de desproteção contra transferências",
+  "domains_status_tooltip_dispute": "O domínio encontra-se sujeito a um procedimento administrativo ou judicial"
 }
