fix(i18n): add missing translations [CDS 2094]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
@@ -165,7 +165,7 @@
   "ip_failover_short": "Failover",
   "ip_failover_impossible_delete": "Diese IP kann nicht gelöscht werden",
   "ip_failover_impossible_move": "Diese IP kann nicht umgezogen werden",
-  "ip_failover_cloud_move_info": "In Kürze können Sie die Additional Cloud IPs auch anderen OVHcloud-Produkten zuweisen.",
+  "ip_failover_cloud_move_info": "In Kürze können Sie die Additional IPs auch anderen Produkten von OVHcloud zuweisen.",
   "ip_position": "Priorität",
   "ip_position_tooltip": "Das Einlesen der Regeln erfolgt sequenziell. Die Regel 0 hat die höchste Priorität.",
   "ip_rule": "Regel",
@@ -549,7 +549,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "Quell-IP",
   "iplb_infos_ssl_none": "Keines",
-  "iplb_infos_ssl_ovh": "Von OVH bereitgestellt",
+  "iplb_infos_ssl_ovh": "Bereitgestellt von OVHcloud",
   "iplb_infos_ssl_customer": "Vom Kunden bereitgestellt",
   "iplb_stickiness_set_question": "Welche Art der Session-Verwaltung möchten Sie nutzen?",
   "iplb_stickiness_set_success": "Der Wert für die Session-Verwaltung wird in einigen Augenblicken aktualisiert.",
@@ -573,14 +573,14 @@
   "iplb_ssl_chain": "Chain",
   "iplb_ssl_import_title": "Import eines SSL-Zertifikats",
   "iplb_ssl_import_question": "Sie sind dabei, Ihr eigenes SSL-Zertifikat zu importieren.",
-  "iplb_ssl_import_question2": "Hinweis: Sie können das OVH Zertifikat bei Bedarf wiederherstellen.",
+  "iplb_ssl_import_question2": "Hinweis: Sie haben im Folgenden die Möglichkeit, das OVHcloud-Zertifikat wiederherzustellen.",
   "iplb_ssl_import_success": "Ihr SSL-Zertifikat wird in wenigen Minuten importiert.",
   "iplb_ssl_import_failure": "Beim Import Ihres SSL-Zertifikats ist ein Fehler aufgetreten.",
-  "iplb_ssl_restore_title": "OVH SSL-Zertifikat wiederherstellen",
-  "iplb_ssl_restore_question": "Sind Sie sicher, dass Sie das OVH SSL-Zertifikat wiederherstellen möchten?",
+  "iplb_ssl_restore_title": "Das SSL-Zertifikat von OVHcloud wiederherstellen",
+  "iplb_ssl_restore_question": "Sind Sie sicher, dass Sie das SSL-Zertifikat von OVHcloud wiederherstellen möchten?",
   "iplb_ssl_restore_question2": "Es wird eine DCV- (Domain Control Validation) E-Mail an „postmaster@ihre_domain.com“ gesandt.",
-  "iplb_ssl_restore_success": "Sobald die Validierung erfolgt ist, wird Ihr OVH SSL-Zertifikat wiederhergestellt.",
-  "iplb_ssl_restore_failure": "Bei der Wiederherstellung Ihres OVH SSL-Zertifikats ist ein Fehler aufgetreten.",
+  "iplb_ssl_restore_success": "Sobald die Validierung erfolgt ist, wird Ihr OVHcloud SSL-Zertifikat wiederhergestellt.",
+  "iplb_ssl_restore_failure": "Bei der Wiederherstellung Ihres OVHcloud SSL-Zertifikats ist ein Fehler aufgetreten.",
   "iplb_zone_internalnatip": "Interne NAT-IP",
   "iplb_zone_probeip": "IP des Testprotokolls",
   "iplb_zone_order_btn": "Bestellen",
@@ -600,7 +600,7 @@
   "iplb_backend_probe_NONE": "Keines",
   "iplb_backend_probe_help_NONE": "Keines: keine Überprüfung",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: Tests auf dem angegebenen Port",
-  "iplb_backend_probe_help_OCO": "OCO: (OVH Check Out) Tests auf dem Port 79",
+  "iplb_backend_probe_help_OCO": "OCO : (OVHcloud Check Out) Tests auf Port 79",
   "iplb_backend_add_title": "Backend hinzufügen",
   "iplb_backend_add_question": "Vervollständigen Sie die Angaben und klicken Sie dann auf „Bestätigen“:",
   "iplb_backend_add_ipbackend": "Backend-IP",
@@ -703,7 +703,7 @@
   "ip_table_header_reverse_help": "DNS-Eintrag für Reverse-Auflösung (von IP-Adresse zu Hostname).",
   "ip_table_header_virtual_mac_help": "MAC Adresse zum Routen der IP-Adresse auf eine virtualisierte Ressource im Bridge-Modus für kompatible Produkte.",
   "ip_table_header_mitigation_help": "Status des DDoS-Schutzes",
-  "ip_table_header_security_help": "Status des Edge Firewall-Netzwerks",
+  "ip_table_header_security_help": "Status der Edge Network Firewall",
   "ip_table_header_game_mitigation_help": "Verfügbarkeit des Game DDoS-Schutzes für den Dienst.",
   "ip_table_header_organisation": "Organisation",
   "ip_table_header_organisation_help": "Eine Organisation ist die für einen bestimmten IP-Block verantwortliche Stelle, z. B. Ihr Unternehmen.",
@@ -724,9 +724,9 @@
   "ip_mitigation_CREATION_PENDING_help": "Der Schutz wird aktiviert.",
   "ip_mitigation_REMOVAL_PENDING_help": "Der Schutz wird deaktiviert.",
   "ip_game_mitigation_ACTIVATED_help": "Die Option DDoS-Schutz ist für diesen Dienst verfügbar.",
-  "ip_firewall_NOT_CONFIGURED_help": "Der Traffic verläuft nicht über das Edge Firewall Network. Das Edge Firewall Network ist noch nicht konfiguriert worden.",
-  "ip_firewall_DEACTIVATED_help": "Der Traffic wird nicht über das Edge Firewall Network übertragen.",
-  "ip_firewall_ACTIVATED_help": "Der Traffic von außerhalb des OVHcloud Netzwerks verläuft über das Edge Firewall Network. Hinweis: Das Edge Firewall Network wird bei jedem DDoS-Angriff automatisch aktiviert; vor Ende des Angriffs kann es nicht deaktiviert werden.",
+  "ip_firewall_NOT_CONFIGURED_help": "Der Traffic verläuft nicht über die Edge Network Firewall. Sie wurde noch nicht konfiguriert.",
+  "ip_firewall_DEACTIVATED_help": "Der Traffic läuft nicht über die Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "Der Traffic von außerhalb des OVHcloud-Netzwerks verläuft über die Edge Network Firewall. Hinweis: Die Edge Network Firewall wird bei jedem DDoS-Angriff automatisch aktiviert; vor Ende des Angriffs kann sie nicht deaktiviert werden.",
   "ip_firewall_PENDING_help": "Die Firewall wird gerade aktiviert oder deaktiviert.",
   "ip_firewall_DISABLE_PENDING_help": "Die Firewall wird gerade deaktiviert.",
   "ip_firewall_ENABLE_PENDING_help": "Die Firewall wird gerade aktiviert.",
