--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
@@ -165,7 +165,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "This IP cannot be deleted ",
   "ip_failover_impossible_move": "This IP cannot be moved ",
-  "ip_failover_cloud_move_info": "You will soon be able to move cloud Additional IPs to other OVHcloud products.",
+  "ip_failover_cloud_move_info": "You will soon be able to move the Additional IPs to other OVHcloud products.",
   "ip_position": "Priority",
   "ip_position_tooltip": "Rules are read sequentially. Rule 0 has the highest priority.",
   "ip_rule": "Rule",
@@ -549,7 +549,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "Source IP",
   "iplb_infos_ssl_none": "None",
-  "iplb_infos_ssl_ovh": "Provided by OVH",
+  "iplb_infos_ssl_ovh": "Provided by OVHcloud",
   "iplb_infos_ssl_customer": "Provided by the customer",
   "iplb_stickiness_set_question": "Which type of session management would you like?",
   "iplb_stickiness_set_success": "The session management will be updated in a few minutes.",
@@ -573,14 +573,14 @@
   "iplb_ssl_chain": "Channel",
   "iplb_ssl_import_title": "Import an SSL certificate",
   "iplb_ssl_import_question": "You're about to import your own SSL certificate.",
-  "iplb_ssl_import_question2": "Note: you may restore the OVH certificate later on if you wish.",
+  "iplb_ssl_import_question2": "Note: You may restore the OVHcloud certificate later on, if you wish.",
   "iplb_ssl_import_success": "Your SSL certificate will be imported in a few minutes.",
   "iplb_ssl_import_failure": "An error occurred when trying to import your SSL certificate.",
-  "iplb_ssl_restore_title": "Restoring the OVH SSL certificate",
-  "iplb_ssl_restore_question": "Are you sure you want to restore the OVH SSL certificate?",
+  "iplb_ssl_restore_title": "Restore the OVHcloud SSL certificate",
+  "iplb_ssl_restore_question": "Are you sure you want to restore the OVHcloud SSL certificate?",
   "iplb_ssl_restore_question2": "A DCV email will be sent to \"postmaster@your_domain.com\".",
-  "iplb_ssl_restore_success": "Your OVH SSL certificate will be restored as soon as it has been validated.",
-  "iplb_ssl_restore_failure": "An error occurred when trying to restore your OVH SSL certificate.",
+  "iplb_ssl_restore_success": "Your OVHcloud SSL certificate will be restored as soon as it has been validated.",
+  "iplb_ssl_restore_failure": "An error has occurred restoring your OVHcloud SSL certificate.",
   "iplb_zone_internalnatip": "NAT internal IP",
   "iplb_zone_probeip": "IP test protocol",
   "iplb_zone_order_btn": "Order",
@@ -600,7 +600,7 @@
   "iplb_backend_probe_NONE": "None",
   "iplb_backend_probe_help_NONE": "None: no verification",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: Tests on the indicated port",
-  "iplb_backend_probe_help_OCO": "OCO: (OVH Check-out) Tests on port 79",
+  "iplb_backend_probe_help_OCO": "OCO: (OVHcloud Check-out) Tests on port 79",
   "iplb_backend_add_title": "Add a back-end",
   "iplb_backend_add_question": "Fill in the information, then click \"Validate\":",
   "iplb_backend_add_ipbackend": "Back-end IP",
