--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_es_ES.json
@@ -165,7 +165,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "Esta IP no puede eliminarse.",
   "ip_failover_impossible_move": "Esta IP no puede moverse.",
-  "ip_failover_cloud_move_info": "Dentro de poco podrá migrar las direcciones Additional IP Cloud hacia otros productos de OVHcloud.",
+  "ip_failover_cloud_move_info": "Próximamente será posible transferir las direcciones Additional IP hacia otros productos de OVHcloud.",
   "ip_position": "Prioridad",
   "ip_position_tooltip": "La lectura de las reglas es secuencial. La regla 0 tiene la prioridad más alta.",
   "ip_rule": "Regla",
@@ -549,7 +549,7 @@
   "iplb_infos_stickiness_cookie": "Cookie",
   "iplb_infos_stickiness_sourceIp": "IP de origen",
   "iplb_infos_ssl_none": "Ninguna",
-  "iplb_infos_ssl_ovh": "Proporcionado por OVH",
+  "iplb_infos_ssl_ovh": "Proporcionado por OVHcloud",
   "iplb_infos_ssl_customer": "Proporcionado por el cliente",
   "iplb_stickiness_set_question": "¿Qué tipo de gestión de sesiones desea?",
   "iplb_stickiness_set_success": "El valor de la gestión de sesiones va a actualizarse.",
@@ -573,14 +573,14 @@
   "iplb_ssl_chain": "Cadena",
   "iplb_ssl_import_title": "Importar un certificado SSL",
   "iplb_ssl_import_question": "Va a importar su propio certificado SSL.",
-  "iplb_ssl_import_question2": "Importante: Más adelante podrá restaurar el certificado OVH si lo desea.",
+  "iplb_ssl_import_question2": "Importante: es posible restaurar el certificado OVHcloud más adelante, si así lo desea.",
   "iplb_ssl_import_success": "La importación de su certificado SSL finalizará en los próximos minutos.",
   "iplb_ssl_import_failure": "Se ha producido un error al importar el certificado SSL.",
-  "iplb_ssl_restore_title": "Restaurar el certificado SSL OVH",
-  "iplb_ssl_restore_question": "¿Seguro que quiere restaurar el certificado SSL de OVH?",
+  "iplb_ssl_restore_title": "Restaurar el certificado SSL de OVHcloud",
+  "iplb_ssl_restore_question": "¿Seguro que quiere restaurar el certificado SSL de OVHcloud?",
   "iplb_ssl_restore_question2": "Se enviará un mensaje de correo electrónico de DCV a «postmaster@sudominio.com».",
-  "iplb_ssl_restore_success": "El certificado SSL de OVH se restaurará una vez validado.",
-  "iplb_ssl_restore_failure": "Se ha producido un error al restaurar el certificado SSL de OVH.",
+  "iplb_ssl_restore_success": "Su certificado SSL de OVHcloud se restaurará una vez validado.",
+  "iplb_ssl_restore_failure": "Se ha producido un error al restaurar su certificado SSL de OVHcloud.",
   "iplb_zone_internalnatip": "IP NAT interna",
   "iplb_zone_probeip": "IP del protocolo de prueba",
   "iplb_zone_order_btn": "Contratar",
@@ -600,7 +600,7 @@
   "iplb_backend_probe_NONE": "Ninguna",
   "iplb_backend_probe_help_NONE": "Ninguno: Sin verificación",
   "iplb_backend_probe_help_HTTPICMP": "HTTP/ICMP: Puebas en el puerto indicado",
-  "iplb_backend_probe_help_OCO": "OCO (Ovh Check Out): Pruebas en el puerto 79",
+  "iplb_backend_probe_help_OCO": "OCO: (OVHcloud Check Out) Pruebas en el puerto 79",
   "iplb_backend_add_title": "Añadir un backend",
   "iplb_backend_add_question": "Introduzca la información y haga clic en «Aceptar»:",
   "iplb_backend_add_ipbackend": "IP del backend",
@@ -703,7 +703,7 @@
   "ip_table_header_reverse_help": "Registro DNS que permite la resolución inversa (dirección IP hacia el nombre del host).",
   "ip_table_header_virtual_mac_help": "Dirección MAC utilizada para enrutar la dirección IP hacia un recurso virtualizado en modo «bridge» para los productos compatibles.",
   "ip_table_header_mitigation_help": "Estado de la protección anti-DDoS",
-  "ip_table_header_security_help": "Estado del Edge Firewall Network",
+  "ip_table_header_security_help": "Estado del Edge Network Firewall",
   "ip_table_header_game_mitigation_help": "Disponibilidad de la protección anti-DDoS Game para el servicio.",
   "ip_table_header_organisation": "Organización",
   "ip_table_header_organisation_help": "Una organización representa la entidad responsable de un bloque de IP determinado (por ejemplo, su empresa).",
@@ -724,9 +724,9 @@
   "ip_mitigation_CREATION_PENDING_help": "Activando la mitigación...",
   "ip_mitigation_REMOVAL_PENDING_help": "Desactivando la mitigación...",
   "ip_game_mitigation_ACTIVATED_help": "La opción de protección anti-DDoS Game está disponible para este servicio.",
-  "ip_firewall_NOT_CONFIGURED_help": "El tráfico no pasa por el Edge Firewall Network, ya que este último no se ha configurado.",
-  "ip_firewall_DEACTIVATED_help": "El tráfico no pasa por el Edge Firewall Network.",
-  "ip_firewall_ACTIVATED_help": "El tráfico procedente de fuera de la red de OVHcloud pasa por el Edge Firewall Network. Importante: el Edge Firewall Network se activa automáticamente con cada ataque DDoS y no es posible desactivarlo hasta que el ataque finaliza.",
+  "ip_firewall_NOT_CONFIGURED_help": "El tráfico no pasa por el Edge Network Firewall, ya que este último no se ha configurado.",
+  "ip_firewall_DEACTIVATED_help": "El tráfico no pasa por el Edge Network Firewall.",
+  "ip_firewall_ACTIVATED_help": "El tráfico procedente de fuera de la red de OVHcloud pasa por el Edge Network Firewall. Importante: el Edge Network Firewall se activa automáticamente con cada ataque DDoS y no es posible desactivarlo hasta que el ataque finaliza.",
   "ip_firewall_PENDING_help": "Activando o desactivando el firewall...",
   "ip_firewall_DISABLE_PENDING_help": "Desactivando el firewall..",
   "ip_firewall_ENABLE_PENDING_help": "Activando el firewall...",
