feat(iam): add entry menu
ref: MANAGER-10393
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
@@ -135,6 +135,7 @@
   "sidebar_orders": "Mes commandes",
   "sidebar_account_profile": "Mon profil",
   "sidebar_account_contacts": "Mes contacts",
+  "sidebar_account_iam": "Identités et accès (IAM)",
   "sidebar_billing_services": "Mes services",
   "sidebar_billing_ssh": "Mes clés SSH",
   "sidebar_billing_bills": "Mes factures",
